# screenkey-wayland-alternative-with-mouse-clicks-public

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  meson.build
.github/: nav-check.mjs
.github/workflows/: nav-check.yml  pages.yml  release-deb.yml
data/: io.github.vibecodeblogger.KeysAndClicksVisualizer.desktop  io.github.vibecodeblogger.KeysAndClicksVisualizer.metainfo.xml  io.github.vibecodeblogger.KeysAndClicksVisualizer.policy.in  meson.build
data/icons/: gen-icons.py
include/: keysclicks-privacy-provider.h
po/: LINGUAS  POTFILES  am.po  ar.po  az.po  be.po  bn.po  en.po  es-419.po  fa.po  fil.po  fr.po  gu.po  hi.po  ht.po  hy.po  ja.po  ka.po  keysclicks.pot  kk.po  ko.po  meson.build  pa.po  pl.po  pt-BR.po  ro.po  ru.po  sw.po  te.po  uk.po  ur.po  uz.po  vi.po  zh-Hans.po  zh-Hant.po
scripts/: build-deb.sh  install.sh
src/backend/: keysclicks-input.c  meson.build
src/frontend/: keysclicks-accent-css.h  keysclicks-backend.c  keysclicks-backend.h  keysclicks-dock.c  keysclicks-dock.h  keysclicks-feedback-payload.c  keysclicks-feedback-payload.h  keysclicks-feedback.c  keysclicks-feedback.h  keysclicks-i18n.c  keysclicks-i18n.h  keysclicks-keymap.c  keysclicks-keymap.h  keysclicks-languages.c  keysclicks-languages.h  keysclicks-layouts.c  keysclicks-layouts.h  keysclicks-overlay.c  keysclicks-overlay.h  keysclicks-privacy.c  keysclicks-privacy.h  keysclicks-pro-links.h  keysclicks-settings.c  keysclicks-settings.h  keysclicks-window.c  keysclicks-window.h  main.c  meson.build  version.h.in
website/: index.html  llms.txt  robots.txt  sitemap.xml
